<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_session_message"
                android:layout_gravity="top|center_horizontal"
                style="?android:listSeparatorTextViewStyle"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.twigproject.ecotest.Controller.CustomSquareButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/boilers_session_button"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/boilers_session"/>
                    <com.twigproject.ecotest.Controller.CustomSquareButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/calc_kilns_session_button"
                        android:text="@string/calc_kilns_session"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.twigproject.ecotest.Controller.CustomSquareButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lime_kilns_session_button"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/lime_kiln_session"/>
                    <com.twigproject.ecotest.Controller.CustomSquareButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/edit_report_button"
                        android:text="@string/edit_report"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

</ScrollView>